<resources>
    <string name="app_name">layoutActivtyFragment</string>
    <string name="logo_app">Logo App</string>
    <string name="e_mail">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="sign_up_txt">Don\'t have a account? Sign up here</string>
    <string name="username_txt">Username</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="sign_txt">Register</string>
    <string name="have_accout_txt">Already have an account? Login here</string>
    <string name="return_to_login_txt">Return to Login</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="forget_password">Forget Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstfragment_txt">FirstFragment</string>
    <string name="thirdfragment_txt">ThirdFragment</string>
    <string name="secondfragment_txt">SecondFragment</string>
    <string name="btn_next">NEXT</string>
</resources>